Add scale sizes

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "60dacd93-713c-48c4-a170-df37179f053f",
    "metadata": {},
    "outputs": [],
@@ -16,155 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "5e5ca7aa-22c8-4028-aec5-b6eabcfb3fb3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Member</th>\n",
-       "      <th>Address</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Postal Code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Alberta Conference SDA Church</td>\n",
-       "      <td>5816 Hwy 2A</td>\n",
-       "      <td>Lacombe</td>\n",
-       "      <td>T4L 2G5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Alberta Health Services</td>\n",
-       "      <td>48 Quarry Park Blvd. SE</td>\n",
-       "      <td>Calgary</td>\n",
-       "      <td>T2C 5P2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Alberta Innovates</td>\n",
-       "      <td>1500, 10104 - 103 Avenue</td>\n",
-       "      <td>Edmonton</td>\n",
-       "      <td>T5J 0H8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Alberta University of the Arts</td>\n",
-       "      <td>1407 - 14th Avenue NW</td>\n",
-       "      <td>Calgary</td>\n",
-       "      <td>T2N 4R3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Aspen View School Division</td>\n",
-       "      <td>3600 - 48 Avenue</td>\n",
-       "      <td>Athabasca</td>\n",
-       "      <td>T9S 1M8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>University of Lethbridge</td>\n",
-       "      <td>4401 University Drive</td>\n",
-       "      <td>Lethbridge</td>\n",
-       "      <td>T1K 3M4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>Wetaskiwin Regional Public Schools</td>\n",
-       "      <td>5704 - 51 Street</td>\n",
-       "      <td>Wetaskiwin</td>\n",
-       "      <td>T9A 3G1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>Whipcord Ltd</td>\n",
-       "      <td>3528 30 Street North</td>\n",
-       "      <td>Lethbridge</td>\n",
-       "      <td>T1H 6Z4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>Wild Rose School Division No.66</td>\n",
-       "      <td>4912 - 43 Street</td>\n",
-       "      <td>Rocky Mountain House</td>\n",
-       "      <td>T4T 1P4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>Wolf Creek Regional Division No.32</td>\n",
-       "      <td>6000 Highway 2A</td>\n",
-       "      <td>Ponoka</td>\n",
-       "      <td>T4J 1P6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>97 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                Member                   Address  \\\n",
-       "0        Alberta Conference SDA Church               5816 Hwy 2A   \n",
-       "1              Alberta Health Services   48 Quarry Park Blvd. SE   \n",
-       "2                    Alberta Innovates  1500, 10104 - 103 Avenue   \n",
-       "3       Alberta University of the Arts     1407 - 14th Avenue NW   \n",
-       "4           Aspen View School Division          3600 - 48 Avenue   \n",
-       "..                                 ...                       ...   \n",
-       "94            University of Lethbridge     4401 University Drive   \n",
-       "95  Wetaskiwin Regional Public Schools          5704 - 51 Street   \n",
-       "96                        Whipcord Ltd      3528 30 Street North   \n",
-       "97     Wild Rose School Division No.66          4912 - 43 Street   \n",
-       "98  Wolf Creek Regional Division No.32           6000 Highway 2A   \n",
-       "\n",
-       "                    City Postal Code  \n",
-       "0                Lacombe     T4L 2G5  \n",
-       "1                Calgary     T2C 5P2  \n",
-       "2               Edmonton     T5J 0H8  \n",
-       "3                Calgary     T2N 4R3  \n",
-       "4              Athabasca     T9S 1M8  \n",
-       "..                   ...         ...  \n",
-       "94            Lethbridge     T1K 3M4  \n",
-       "95            Wetaskiwin     T9A 3G1  \n",
-       "96            Lethbridge     T1H 6Z4  \n",
-       "97  Rocky Mountain House     T4T 1P4  \n",
-       "98                Ponoka     T4J 1P6  \n",
-       "\n",
-       "[97 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = pd.read_csv('data/Connected member addresses for network map November 2022 - Sheet1.csv', header=None, \n",
     "                   names=['Member', 'Address', 'City', 'Postal Code'])\n",
@@ -175,204 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "383c1dac-72b4-48c7-898b-d26870e2774e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Member</th>\n",
-       "      <th>Address</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Postal Code</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Alberta Conference SDA Church</td>\n",
-       "      <td>5816 Hwy 2A</td>\n",
-       "      <td>Lacombe</td>\n",
-       "      <td>T4L 2G5</td>\n",
-       "      <td>52.4668</td>\n",
-       "      <td>-113.7353</td>\n",
-       "      <td>POINT (52.467 -113.735)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Alberta Health Services</td>\n",
-       "      <td>48 Quarry Park Blvd. SE</td>\n",
-       "      <td>Calgary</td>\n",
-       "      <td>T2C 5P2</td>\n",
-       "      <td>50.9870</td>\n",
-       "      <td>-113.9634</td>\n",
-       "      <td>POINT (50.987 -113.963)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Alberta Innovates</td>\n",
-       "      <td>1500, 10104 - 103 Avenue</td>\n",
-       "      <td>Edmonton</td>\n",
-       "      <td>T5J 0H8</td>\n",
-       "      <td>53.5428</td>\n",
-       "      <td>-113.4974</td>\n",
-       "      <td>POINT (53.543 -113.497)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Alberta University of the Arts</td>\n",
-       "      <td>1407 - 14th Avenue NW</td>\n",
-       "      <td>Calgary</td>\n",
-       "      <td>T2N 4R3</td>\n",
-       "      <td>51.0621</td>\n",
-       "      <td>-114.1159</td>\n",
-       "      <td>POINT (51.062 -114.116)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Aspen View School Division</td>\n",
-       "      <td>3600 - 48 Avenue</td>\n",
-       "      <td>Athabasca</td>\n",
-       "      <td>T9S 1M8</td>\n",
-       "      <td>54.7169</td>\n",
-       "      <td>-113.2854</td>\n",
-       "      <td>POINT (54.717 -113.285)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>University of Lethbridge</td>\n",
-       "      <td>4401 University Drive</td>\n",
-       "      <td>Lethbridge</td>\n",
-       "      <td>T1K 3M4</td>\n",
-       "      <td>49.6511</td>\n",
-       "      <td>-112.8351</td>\n",
-       "      <td>POINT (49.651 -112.835)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>Wetaskiwin Regional Public Schools</td>\n",
-       "      <td>5704 - 51 Street</td>\n",
-       "      <td>Wetaskiwin</td>\n",
-       "      <td>T9A 3G1</td>\n",
-       "      <td>52.9668</td>\n",
-       "      <td>-113.3687</td>\n",
-       "      <td>POINT (52.967 -113.369)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>Whipcord Ltd</td>\n",
-       "      <td>3528 30 Street North</td>\n",
-       "      <td>Lethbridge</td>\n",
-       "      <td>T1H 6Z4</td>\n",
-       "      <td>49.7000</td>\n",
-       "      <td>-112.8186</td>\n",
-       "      <td>POINT (49.700 -112.819)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>Wild Rose School Division No.66</td>\n",
-       "      <td>4912 - 43 Street</td>\n",
-       "      <td>Rocky Mountain House</td>\n",
-       "      <td>T4T 1P4</td>\n",
-       "      <td>52.3668</td>\n",
-       "      <td>-114.9188</td>\n",
-       "      <td>POINT (52.367 -114.919)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>Wolf Creek Regional Division No.32</td>\n",
-       "      <td>6000 Highway 2A</td>\n",
-       "      <td>Ponoka</td>\n",
-       "      <td>T4J 1P6</td>\n",
-       "      <td>52.6768</td>\n",
-       "      <td>-113.5815</td>\n",
-       "      <td>POINT (52.677 -113.582)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>97 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                Member                   Address  \\\n",
-       "0        Alberta Conference SDA Church               5816 Hwy 2A   \n",
-       "1              Alberta Health Services   48 Quarry Park Blvd. SE   \n",
-       "2                    Alberta Innovates  1500, 10104 - 103 Avenue   \n",
-       "3       Alberta University of the Arts     1407 - 14th Avenue NW   \n",
-       "4           Aspen View School Division          3600 - 48 Avenue   \n",
-       "..                                 ...                       ...   \n",
-       "94            University of Lethbridge     4401 University Drive   \n",
-       "95  Wetaskiwin Regional Public Schools          5704 - 51 Street   \n",
-       "96                        Whipcord Ltd      3528 30 Street North   \n",
-       "97     Wild Rose School Division No.66          4912 - 43 Street   \n",
-       "98  Wolf Creek Regional Division No.32           6000 Highway 2A   \n",
-       "\n",
-       "                    City Postal Code      lat       lon  \\\n",
-       "0                Lacombe     T4L 2G5  52.4668 -113.7353   \n",
-       "1                Calgary     T2C 5P2  50.9870 -113.9634   \n",
-       "2               Edmonton     T5J 0H8  53.5428 -113.4974   \n",
-       "3                Calgary     T2N 4R3  51.0621 -114.1159   \n",
-       "4              Athabasca     T9S 1M8  54.7169 -113.2854   \n",
-       "..                   ...         ...      ...       ...   \n",
-       "94            Lethbridge     T1K 3M4  49.6511 -112.8351   \n",
-       "95            Wetaskiwin     T9A 3G1  52.9668 -113.3687   \n",
-       "96            Lethbridge     T1H 6Z4  49.7000 -112.8186   \n",
-       "97  Rocky Mountain House     T4T 1P4  52.3668 -114.9188   \n",
-       "98                Ponoka     T4J 1P6  52.6768 -113.5815   \n",
-       "\n",
-       "                   geometry  \n",
-       "0   POINT (52.467 -113.735)  \n",
-       "1   POINT (50.987 -113.963)  \n",
-       "2   POINT (53.543 -113.497)  \n",
-       "3   POINT (51.062 -114.116)  \n",
-       "4   POINT (54.717 -113.285)  \n",
-       "..                      ...  \n",
-       "94  POINT (49.651 -112.835)  \n",
-       "95  POINT (52.967 -113.369)  \n",
-       "96  POINT (49.700 -112.819)  \n",
-       "97  POINT (52.367 -114.919)  \n",
-       "98  POINT (52.677 -113.582)  \n",
-       "\n",
-       "[97 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lats = []\n",
     "lons = []\n",
@@ -387,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "867fb1f2-b858-474a-a3c6-169fe80e74f4",
    "metadata": {},
    "outputs": [],
@@ -435,22 +96,58 @@
     ")\n",
     "fig.update_geos(lataxis_range=[48,61],\n",
     "               lonaxis_range=[-120,-110])\n",
-    "# fig.show()\n",
-    "fig.write_html('membermap.html')"
+    "fig.show()\n",
+    "#fig.write_html('membermap.html')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b9d60158",
+   "metadata": {},
+   "source": [
+    "## Finding Scale distances on a 4x8 sheet of plywood"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec7a7fb6-ca5f-4c3c-8340-2b62c196da15",
+   "id": "24a55e79",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "try:\n",
+    "    import haversine as hs\n",
+    "except:\n",
+    "    !pip install --user haversine\n",
+    "    import haversine as hs\n",
+    "'''\n",
+    "x_range = [data['lon'].max(), data['lon'].min()]\n",
+    "y_range = [data['lat'].max(), data['lat'].min()]\n",
+    "data['x'] = (data['lon'] - x_range[1]) / (x_range[0] - x_range[1])\n",
+    "data['y'] = (data['lat'] - y_range[1]) / (y_range[0] - y_range[1])\n",
+    "data['x inches'] = data['x'] * 46\n",
+    "data['y inches'] = data['y'] * 46\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef57c5cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "px.scatter(data, x='x inches', y='y inches', hover_name='Member', hover_data=['Address', 'City', 'Postal Code'], height=800, width=400).show()\n",
+    "fig.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -464,11 +161,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.1"
   },
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "d1ca6d17674200220921376aaeb3d36cffe15ecab2470a9a5e7a456cdbf61425"
    }
   }
  },
