Add cities for groupings

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -11,7 +11,9 @@
     "import pandas as pd\n",
     "import pgeocode\n",
     "import plotly.graph_objects as go\n",
-    "nomi = pgeocode.Nominatim('ca')"
+    "nomi = pgeocode.Nominatim('ca')\n",
+    "import numpy as np\n",
+    "import folium"
    ]
   },
   {
@@ -46,6 +48,16 @@
     "distances['geometry'] = geopandas.points_from_xy(distances['lat'], distances['lon'])\n",
     "distances.sort_values(by='lat', inplace=True)\n",
     "distances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f78d2068",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distances[distances['Member'].str.contains('Albert')]"
    ]
   },
   {
@@ -126,6 +138,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2b8851e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getCityLocation(city):\n",
+    "    location = nomi.query_location(city)\n",
+    "    return location['latitude'].mean(), location['longitude'].mean()\n",
+    "\n",
+    "cities_data = pd.read_html('https://en.wikipedia.org/wiki/List_of_cities_in_Alberta')[0]\n",
+    "cities = cities_data['Name'].copy()\n",
+    "cities.drop(cities.tail(1).index,inplace=True) # drop the last row\n",
+    "cities.loc[len(cities)] = 'Fort McMurray' # add Fort McMurray\n",
+    "cities['Name'] = cities['Name'].str.split('[').str[0].str.split('(').str[0].str.strip()\n",
+    "cities['Coordinates'] = cities['Name'].apply(getCityLocation)\n",
+    "cities['Latitude'] = cities['Coordinates'].str[0]\n",
+    "cities['Longitude'] = cities['Coordinates'].str[1]\n",
+    "cities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f650681f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities_list = ['Banff','Calgary','Edmonton','Fort McMurray','Grande Prairie','Lethbridge','Lloydminster','Medicine Hat','Red Deer']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d30f70cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# folium map of cities\n",
+    "map = folium.Map(location=[cities['Latitude'].mean(), cities['Longitude'].mean()], zoom_start=5)\n",
+    "for i in range(0,len(cities)):\n",
+    "    folium.Marker([cities.iloc[i]['Latitude'], cities.iloc[i]['Longitude']], popup=cities.iloc[i]['Name']).add_to(map)\n",
+    "map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7ac0d5b8",
    "metadata": {},
    "outputs": [],
@@ -143,6 +201,10 @@
     "        distances_list.append([distances.iloc[i]['Member'], distances.iloc[j]['Member'], \n",
     "                          hs.haversine((distances.iloc[i]['lat'], distances.iloc[i]['lon']), \n",
     "                                       (distances.iloc[j]['lat'], distances.iloc[j]['lon']))])\n",
+    "\n",
+    "# add a row for the last member to the first member\n",
+    "distances_list.append([distances.iloc[-1]['Member'], distances.iloc[0]['Member'], hs.haversine((distances.iloc[-1]['lat'], distances.iloc[-1]['lon']), (distances.iloc[0]['lat'], distances.iloc[0]['lon']))])\n",
+    "\n",
     "distances_between = pd.DataFrame(distances_list, columns=['Member', 'Member2', 'Distance'])\n",
     "\n",
     "# join the latitude and longitude of each member to the distances\n",
@@ -160,10 +222,110 @@
     "# for each member create a list of the other members that are within 100 km\n",
     "\n",
     "def findNeighbours(m):\n",
-    "    return distances_between[(distances_between['Member'] == m) & (distances_between['Distance'] < 100)]['Member2'].values\n",
+    "    return [m] + distances_between[(distances_between['Member'] == m) & (distances_between['Distance'] < 100)]['Member2'].values.tolist()\n",
     "\n",
     "distances_between['Neighbours'] = distances_between['Member'].apply(findNeighbours)\n",
     "distances_between"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0e9400b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def createRectangle(neighbours):\n",
+    "    latList = []\n",
+    "    lonList = []\n",
+    "    for place in neighbours:\n",
+    "        #print(place)\n",
+    "        latList.append(distances_between[distances_between['Member'] == place]['lat'].values[0])\n",
+    "        lonList.append(distances_between[distances_between['Member'] == place]['lon'].values[0])\n",
+    "    return [np.max(latList), np.min(latList), np.max(lonList), np.min(lonList)]\n",
+    "\n",
+    "def findLatMidpoint(neighbours):\n",
+    "    latList = []\n",
+    "    for place in neighbours:\n",
+    "        latList.append(distances_between[distances_between['Member'] == place]['lat'].values[0])\n",
+    "    return np.mean(latList)\n",
+    "\n",
+    "def findLonMidpoint(neighbours):\n",
+    "    lonList = []\n",
+    "    for place in neighbours:\n",
+    "        lonList.append(distances_between[distances_between['Member'] == place]['lon'].values[0])\n",
+    "    return np.mean(lonList)\n",
+    "\n",
+    "#distances_between['Rectangle'] = distances_between['Neighbours'].apply(createRectangle)\n",
+    "#distances_between[['Midpoint Lat','Midpoint Lon']] = distances_between['Neighbours'].apply(findMidpoint)\n",
+    "#distances_between['Midpoint Lat'], distances_between['Midpoint Lon'] = distances_between['Neighbours'].apply(findMidpoint) #findMidpoint(distances_between['Neighbours'])\n",
+    "\n",
+    "distances_between['Midpoint Lat'] = distances_between['Neighbours'].apply(findLatMidpoint)\n",
+    "distances_between['Midpoint Lon'] = distances_between['Neighbours'].apply(findLonMidpoint)\n",
+    "\n",
+    "print('There are now {} unique points'.format(len(distances_between['Midpoint Lat'].unique())))\n",
+    "\n",
+    "distances_between"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7df6ab7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_latitude = distances_between['lat'].median()\n",
+    "median_longitude = distances_between['lon'].median()\n",
+    "new_map = folium.Map(location=[median_latitude, median_longitude], zoom_start=6, tiles='stamen terrain')\n",
+    "for i in distances_between.itertuples():\n",
+    "    folium.Marker([i.lat, i.lon], popup=i.Member).add_to(new_map)\n",
+    "display(new_map)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8d7584aa",
+   "metadata": {},
+   "source": [
+    "### Try different size rectangles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0ece443",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "separation_distance = 200\n",
+    "\n",
+    "def findNeighbours(m):\n",
+    "    return [m] + distances_between[(distances_between['Member'] == m) & (distances_between['Distance'] < separation_distance)]['Member2'].values.tolist()\n",
+    "\n",
+    "distances_between['Neighbours'] = distances_between['Member'].apply(findNeighbours)\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def findLatMidpoint(neighbours):\n",
+    "    latList = []\n",
+    "    for place in neighbours:\n",
+    "        latList.append(distances_between[distances_between['Member'] == place]['lat'].values[0])\n",
+    "    return np.mean(latList)\n",
+    "\n",
+    "def findLonMidpoint(neighbours):\n",
+    "    lonList = []\n",
+    "    for place in neighbours:\n",
+    "        lonList.append(distances_between[distances_between['Member'] == place]['lon'].values[0])\n",
+    "    return np.mean(lonList)\n",
+    "\n",
+    "distances_between['Midpoint Lat'] = distances_between['Neighbours'].apply(findLatMidpoint)\n",
+    "distances_between['Midpoint Lon'] = distances_between['Neighbours'].apply(findLonMidpoint)\n",
+    "\n",
+    "print('There are now {} unique points'.format(len(distances_between['Midpoint Lat'].unique())))"
    ]
   },
   {
