Add CSV exports

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -103,6 +103,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cf37984e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cities.to_csv('data/cities.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5cb093f3",
    "metadata": {},
    "outputs": [],
@@ -193,6 +203,16 @@
     "updated_cities = cities.drop(rows_to_drop, axis=0)\n",
     "updated_cities.reset_index(inplace=True, drop=True)\n",
     "updated_cities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35b83a6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#updated_cities.to_csv('data/updated_cities.csv', index=False)"
    ]
   },
   {
