--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -83,21 +83,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getCityLocation(city):\n",
-    "    location = data[data['City'] == city]#[['Latitude', 'Longitude']].mean()\n",
-    "    #location = nomi.query_location(city)\n",
-    "    #if not location['latitude'].mean() > 40:\n",
-    "    #    postal_code = data[data['City'] == city]['Postal Code'].unique()[0]\n",
-    "    #    location = nomi.query_postal_code(postal_code)\n",
-    "    return location['Latitude'].mean(), location['Longitude'].mean()\n",
+    "# def getCityLocation(city):\n",
+    "#     location = data[data['City'] == city]#[['Latitude', 'Longitude']].mean()\n",
+    "#     #location = nomi.query_location(city)\n",
+    "#     #if not location['latitude'].mean() > 40:\n",
+    "#     #    postal_code = data[data['City'] == city]['Postal Code'].unique()[0]\n",
+    "#     #    location = nomi.query_postal_code(postal_code)\n",
+    "#     return location['Latitude'].mean(), location['Longitude'].mean()\n",
     "\n",
-    "cities_dict = {}\n",
-    "for city in data['City'].unique():\n",
-    "    cities_dict[city] = getCityLocation(city)\n",
-    "cities = pd.DataFrame.from_dict(cities_dict, orient='index', columns=['Latitude', 'Longitude'])\n",
-    "cities.reset_index(inplace=True)\n",
-    "cities.rename(columns={'index':'Name'}, inplace=True)\n",
-    "cities"
+    "# cities_dict = {}\n",
+    "# for city in data['City'].unique():\n",
+    "#     cities_dict[city] = getCityLocation(city)\n",
+    "# cities = pd.DataFrame.from_dict(cities_dict, orient='index', columns=['Latitude', 'Longitude'])\n",
+    "# cities.reset_index(inplace=True)\n",
+    "# cities.rename(columns={'index':'Name'}, inplace=True)\n",
+    "# cities"
    ]
   },
   {
@@ -108,6 +108,60 @@
    "outputs": [],
    "source": [
     "#cities.to_csv('data/cities.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f2fa32f-2379-464d-a019-847347b8349f",
+   "metadata": {},
+   "source": [
+    "The below section simply recalculates the lat/long coords using a different implementation of Nominatim, dropping the point in the center of the population centers.\n",
+    "\n",
+    "Manually inspecting all the points, the following are still a little off:\n",
+    "\n",
+    "- Wainwright\n",
+    "- Taber\n",
+    "- Barrhead\n",
+    "\n",
+    "With just three, it's simpler to manually fix them using the coordinates given by Wikipedia/GeoHack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78fb67d4-a010-4505-b99d-7663e7f3771c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities = pd.DataFrame(data['City'].unique(), columns=['Name'])\n",
+    "\n",
+    "from geopy.geocoders import Nominatim\n",
+    "nomi2 = Nominatim(user_agent='my_application')\n",
+    "\n",
+    "lats2 = []\n",
+    "lons2 = []\n",
+    "    \n",
+    "for c in cities['Name']:\n",
+    "    location2 = nomi2.geocode(c + ', AB') # catches a few edge cases of similarly named places outside of AB\n",
+    "    lats2.append(location2[1][0])\n",
+    "    lons2.append(location2[1][1])\n",
+    "cities['Latitude'] = lats2\n",
+    "cities['Longitude'] = lons2\n",
+    "\n",
+    "# Taber\n",
+    "cities.at[1,'Latitude'] = 49.784722\n",
+    "cities.at[1,'Longitude'] = -112.150833\n",
+    "\n",
+    "# Wainwright\n",
+    "cities.at[18,'Latitude'] = 52.833333\n",
+    "cities.at[18,'Longitude'] = -110.866667\n",
+    "\n",
+    "# Barrhead\n",
+    "cities.at[30,'Latitude'] = 54.116667\n",
+    "cities.at[30,'Longitude'] = -114.4\n",
+    "\n",
+    "    \n",
+    "cities"
    ]
   },
   {
@@ -346,13 +400,13 @@
    "outputs": [],
    "source": [
     "#!pip install kaleido\n",
-    "fig3.write_image('membermap.svg')"
+    "# fig3.write_image('membermap.svg')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -366,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
