Update map file

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -135,7 +135,11 @@
    "source": [
     "cities = pd.DataFrame(data['City'].unique(), columns=['Name'])\n",
     "\n",
-    "from geopy.geocoders import Nominatim\n",
+    "try:\n",
+    "    from geopy.geocoders import Nominatim\n",
+    "except:\n",
+    "    !pip install --user geopy\n",
+    "    from geopy.geocoders import Nominatim\n",
     "nomi2 = Nominatim(user_agent='my_application')\n",
     "\n",
     "lats2 = []\n",
@@ -159,7 +163,6 @@
     "# Barrhead\n",
     "cities.at[30,'Latitude'] = 54.116667\n",
     "cities.at[30,'Longitude'] = -114.4\n",
-    "\n",
     "    \n",
     "cities"
    ]
@@ -185,6 +188,7 @@
    "outputs": [],
    "source": [
     "cities.sort_values(by='Latitude', inplace=True)\n",
+    "cities.reset_index(inplace=True, drop=True)\n",
     "\n",
     "distances_list = []\n",
     "for i in range(len(cities)):\n",
@@ -203,6 +207,16 @@
    "outputs": [],
    "source": [
     "dbc[dbc['Distance'] < 75]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94d67618",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities"
    ]
   },
   {
@@ -228,7 +242,7 @@
     "    'Elk Point':'Lac La Biche',\n",
     "    'Grouard':'High Prairie',\n",
     "    'Red Earth Creek':'High Prairie',\n",
-    "    'Fort Vermilion':'Grimshaw',\n",
+    "    'Grimshaw':'Peace River',\n",
     "}"
    ]
   },
@@ -242,7 +256,7 @@
     "rows_to_drop = []\n",
     "for i in range(len(cities)):\n",
     "    if cities.iloc[i]['Name'] in cities_to_replace.keys():\n",
-    "        print(i, cities.iloc[i]['Name'])\n",
+    "        print('drop:', i, cities.iloc[i]['Name'])\n",
     "        rows_to_drop.append(i)\n",
     "rows_to_drop"
    ]
@@ -333,6 +347,7 @@
     ")\n",
     "fig0.update_geos(lataxis_range=[48,61],\n",
     "               lonaxis_range=[-120,-110])\n",
+    "print('Original member map')\n",
     "fig0.show()\n",
     "#fig.write_html('membermap.html')"
    ]
@@ -388,6 +403,7 @@
     ")\n",
     "fig3.update_geos(lataxis_range=[48,61],\n",
     "               lonaxis_range=[-120,-110])\n",
+    "print('Updated member map')\n",
     "fig3.show()\n",
     "#fig3.write_html('membermap.html')"
    ]
@@ -400,7 +416,7 @@
    "outputs": [],
    "source": [
     "#!pip install kaleido\n",
-    "# fig3.write_image('membermap.svg')"
+    "fig3.write_image('membermap.svg')"
    ]
   }
  ],
@@ -420,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.1"
   },
   "vscode": {
    "interpreter": {
