Add function to export status dataframe

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -286,6 +286,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8c3a7139",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "replaced_cities = pd.DataFrame.from_dict(cities_to_replace, orient='index', columns=['Replaced'])\n",
+    "replaced_cities.reset_index(inplace=True)\n",
+    "\n",
+    "status = pd.read_csv('data/updated_cities.csv')\n",
+    "status.drop(['Latitude', 'Longitude'], axis=1, inplace=True)\n",
+    "for i in range(len(status)):\n",
+    "    city = status.iloc[i]['Name']\n",
+    "    cities = [city]\n",
+    "    if city in replaced_cities['Replaced'].tolist():\n",
+    "        cities.extend(replaced_cities[replaced_cities['Replaced'] == city]['index'].tolist())\n",
+    "    status.loc[i,'Cities'] = str(cities)#.join(';')\n",
+    "\n",
+    "status.drop('Name', axis=1, inplace=True)\n",
+    "status['LED'] = status.index\n",
+    "status['Color'] = 'white'\n",
+    "# export to csv\n",
+    "#status.to_csv('../docs/status.csv', index=False)\n",
+    "status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "eb6c1d67",
    "metadata": {},
    "outputs": [],
@@ -416,7 +443,7 @@
    "outputs": [],
    "source": [
     "#!pip install kaleido\n",
-    "fig3.write_image('membermap.svg')"
+    "#fig3.write_image('membermap.svg')"
    ]
   }
  ],
