Set LED RGB based on number of members

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -301,13 +301,48 @@
     "    if city in replaced_cities['Replaced'].tolist():\n",
     "        cities.extend(replaced_cities[replaced_cities['Replaced'] == city]['index'].tolist())\n",
     "    status.loc[i,'Cities'] = str(cities)#.join(';')\n",
+    "    # Count how many members are in or near that \"replaced_city\"\n",
+    "    #status.loc[i,'Count'] = len(cities)\n",
+    "    member_count = 0\n",
+    "    for city in cities:\n",
+    "        member_count += len(data[data['City'] == city])\n",
+    "    status.loc[i,'Count'] = member_count\n",
     "\n",
+    "status['Count'] = status['Count'].astype(int)\n",
     "status.drop('Name', axis=1, inplace=True)\n",
     "status['LED'] = status.index\n",
-    "status['Color'] = 'white'\n",
+    "# set the LED brightness to the number of members in that city (scaled to 100-255)\n",
+    "status['Brightness'] = (status['Count']/status['Count'].max()*155 + 100).astype(int)\n",
+    "status['Red'] = status['Brightness']\n",
+    "status['Green'] = status['Brightness']\n",
+    "status['Blue'] = status['Brightness']\n",
     "# export to csv\n",
     "#status.to_csv('../docs/status.csv', index=False)\n",
     "status"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "dad14643",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c4acbe4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b2c588ca",
+   "metadata": {},
+   "source": [
+    "Create a map for CNC"
    ]
   },
   {
