Remove Citites column from CSV

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -316,8 +316,10 @@
     "status['Red'] = status['Brightness']\n",
     "status['Green'] = status['Brightness']\n",
     "status['Blue'] = status['Brightness']\n",
-    "# export to csv\n",
-    "#status.to_csv('../docs/status.csv', index=False)\n",
+    "# drop the name column\n",
+    "\n",
+    "# export to csv for LEDs\n",
+    "status.drop('Cities', axis=1).to_csv('../docs/status.csv', index=False)\n",
     "status"
    ]
   },
