--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -319,7 +319,7 @@
     "# drop the name column\n",
     "\n",
     "# export to csv for LEDs\n",
-    "status.drop('Cities', axis=1).to_csv('../docs/status.csv', index=False)\n",
+    "status.drop(['Cities','Count'], axis=1).to_csv('../docs/status.csv', index=False)\n",
     "status"
    ]
   },
@@ -486,7 +486,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -500,11 +500,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "d1ca6d17674200220921376aaeb3d36cffe15ecab2470a9a5e7a456cdbf61425"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
