Add wire routing visualization

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -111,6 +111,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4f2fa32f-2379-464d-a019-847347b8349f",
    "metadata": {},
@@ -481,6 +482,54 @@
    "source": [
     "#!pip install kaleido\n",
     "#fig3.write_image('membermap.svg')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c7fa29cc",
+   "metadata": {},
+   "source": [
+    "## The order that the LEDs are connected in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f88db38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "\n",
+    "updated_cities = pd.read_csv('data/updated_cities.csv')\n",
+    "#px.line(updated_cities.sort_values(by='Latitude'), y='Latitude', x='Longitude', hover_name='Name', height=1000, width=650).update_traces(mode='markers+lines', marker=dict(size=10))\n",
+    "px.line(updated_cities, y='Latitude', x='Longitude', hover_name='Name', height=1000, width=650).update_traces(mode='markers+lines', marker=dict(size=10))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "539e0abb",
+   "metadata": {},
+   "source": [
+    "### Revered mode for labelling the back of the wood"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce1aa847",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "\n",
+    "updated_cities = pd.read_csv('data/updated_cities.csv')\n",
+    "updated_cities['Longitude_reversed'] = updated_cities['Longitude'] * -1\n",
+    "px.line(updated_cities, y='Latitude', x='Longitude_reversed', hover_name='Name', height=1000, width=650).update_traces(mode='markers+lines', marker=dict(size=10))"
    ]
   }
  ],
