Format wire map

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -514,7 +514,7 @@
    "id": "539e0abb",
    "metadata": {},
    "source": [
-    "### Revered mode for labelling the back of the wood"
+    "### Reversed mode for labelling the back of the wood"
    ]
   },
   {
@@ -529,7 +529,17 @@
     "\n",
     "updated_cities = pd.read_csv('data/updated_cities.csv')\n",
     "updated_cities['Longitude_reversed'] = updated_cities['Longitude'] * -1\n",
-    "px.line(updated_cities, y='Latitude', x='Longitude_reversed', hover_name='Name', height=1000, width=650).update_traces(mode='markers+lines', marker=dict(size=10))"
+    "fig = px.line(updated_cities, y='Latitude', x='Longitude_reversed', height=1000, width=650)\n",
+    "fig.add_scatter(y=updated_cities['Latitude'], x=updated_cities['Longitude_reversed'], text=updated_cities['Name'], mode='markers+text', textposition='middle right', marker=dict(size=10))\n",
+    "fig.add_scatter(y=updated_cities['Latitude'], x=updated_cities['Longitude_reversed'], text=updated_cities.index, mode='markers+text', textposition='bottom left', marker=dict(size=10))\n",
+    "fig.update_xaxes(showticklabels=False)\n",
+    "fig.update_yaxes(showticklabels=False)\n",
+    "fig.update_layout(plot_bgcolor='rgba(0,0,0,0)')\n",
+    "fig.update_xaxes(title=None)\n",
+    "fig.update_yaxes(title=None)\n",
+    "fig.update_layout(showlegend=False)\n",
+    "fig.update_layout(margin=dict(l=0, r=0, t=0, b=0))\n",
+    "fig.show()"
    ]
   }
  ],
@@ -549,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.1"
   },
   "vscode": {
    "interpreter": {
